# jsc

./: CMakeLists.txt  README.md  build.cpp  install.sh  jsc.pyi  reBuild.sh
resources/: start.cpp
resources/start/: start.cpp
